# Go2Arm_sim2sim

./: README.md  README_CN.md
devel/: .catkin  local_setup.sh
devel/include/go2arm_gazebo/: Command.h  Orientation.h  Vector3.h
devel/include/robot_msgs/: IMU.h  MotorCommand.h  MotorState.h  RobotCommand.h  RobotState.h
devel/lib/go2arm_gazebo/: init_state  keyboard_control  params
devel/lib/pkgconfig/: gazebo_grasp_plugin.pc  gazebo_version_helpers.pc  go2_description.pc  go2_wx250s_description.pc  go2arm_gazebo.pc  robot_joint_controller.pc  robot_msgs.pc  wx250s_description.pc
devel/share/gazebo_grasp_plugin/cmake/: gazebo_grasp_pluginConfig.cmake
devel/share/gazebo_version_helpers/cmake/: gazebo_version_helpersConfig.cmake
devel/share/go2_description/cmake/: go2_descriptionConfig.cmake
devel/share/go2_wx250s_description/cmake/: go2_wx250s_descriptionConfig.cmake
devel/share/go2arm_gazebo/cmake/: go2arm_gazebo-msg-paths.cmake  go2arm_gazeboConfig.cmake
devel/share/robot_joint_controller/cmake/: robot_joint_controllerConfig.cmake
devel/share/robot_msgs/cmake/: robot_msgs-msg-extras.cmake  robot_msgs-msg-paths.cmake  robot_msgsConfig.cmake
devel/share/wx250s_description/cmake/: wx250s_descriptionConfig.cmake
src/go2arm_gazebo/: CMakeLists.txt
src/go2arm_gazebo/launch/: box.launch  go2arm.launch
src/go2arm_gazebo/model/: config.yaml  policy.pt
src/go2arm_gazebo/msg/: Command.msg  Orientation.msg  Vector3.msg
src/go2arm_gazebo/src/: init_state.cpp  keyboard_control.cpp  main.cpp  params.cpp
src/robots/go2_wx250s_description/: CMakeLists.txt
src/robots/go2_wx250s_description/config/: robot_control.yaml
src/robots/go2_wx250s_description/urdf/: box.urdf
src/robots/go2_wx250s_description/xacro/: box.xacro  const.xacro  gazebo.xacro  go2arm.urdf  inertial_macros.xacro  robot.xacro
src/robots/wx250s_description/: CMakeLists.txt
src/robots/wx250s_description/config/: robot_control.yaml
src/robots/wx250s_description/launch/: gazebo.launch  gazebo_wx250s.launch  wx250s_description.launch
(+52 files in other folders)
